--- a/projetoacademia/Academia/package.json
+++ b/projetoacademia/Academia/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^7.3.3",
     "expo": "~53.0.9",
     "expo-status-bar": "~2.2.3",
+    "firebase": "^11.9.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
